force-app/main/default/objects/pcldm__Execution__c/pcldm__Execution__c.object-meta.xml
<CustomObject>
    <label>Execution</label>
    <nameField>
        <displayFormat>Execution-{0000}</displayFormat>
        <label>Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>