force-app/main/default/objects/pcldm__Execution__c/fields/pcldm__Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Batch_Status__c</fullName>
    <description>Shows the status of the Masking batch executed from Flow of the Data Masking Configuration</description>
    <inlineHelpText>Shows the status of the Masking batch executed from Flow of the Data Masking Configuration</inlineHelpText>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>