force-app/main/default/objects/pcldm__Execution__c/fields/pcldm__End_time__c.field-meta.xml
<CustomField>
    <fullName>pcldm__End_time__c</fullName>
    <description>End time</description>
    <inlineHelpText>Shows the end time of the Configuration Masking batch</inlineHelpText>
    <label>End time</label>
    <type>DateTime</type>
</CustomField>