force-app/main/default/objects/pcldm__Execution__c/fields/pcldm__Objects_Errored__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Objects_Errored__c</fullName>
    <description>Shows the number of Objects for which the records are errored out(includes delete settings) queried under Configuration Masking Batch .</description>
    <inlineHelpText>Shows the number of Objects for which the records are errored out(includes delete settings) queried under Configuration Masking Batch .</inlineHelpText>
    <label>Objects Errored</label>
    <summaryFilterItems>
        <field>pcldm__Execution_Log__c.pcldm__Status__c</field>
        <operation>equals</operation>
        <value>Errored</value>
    </summaryFilterItems>
    <summaryForeignKey>pcldm__Execution_Log__c.pcldm__Execution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>