force-app/main/default/objects/pcldm__Execution__c/fields/pcldm__Objects_Total__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Objects_Total__c</fullName>
    <description>Shows the total number of Objects (includes delete settings) queried under Masking Batch .</description>
    <inlineHelpText>Shows the total number of Objects (includes delete settings) queried under Masking Batch .</inlineHelpText>
    <label>Objects Total</label>
    <summaryForeignKey>pcldm__Execution_Log__c.pcldm__Execution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>