force-app/main/default/objects/pcldm__Execution__c/fields/pcldm__Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Records_Processed__c</fullName>
    <description>Shows the total number of Records successfully processed for Deletion or Masking of all the Objects queried under the Masking Batch</description>
    <inlineHelpText>Shows the total number of Records successfully processed for Deletion or Masking of all the Objects queried under the Masking Batch</inlineHelpText>
    <label>Records Processed</label>
    <summarizedField>pcldm__Execution_Log__c.pcldm__Records_Processed__c</summarizedField>
    <summaryForeignKey>pcldm__Execution_Log__c.pcldm__Execution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>