force-app/main/default/objects/pcldm__Execution__c/fields/pcldm__Start_time__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Start_time__c</fullName>
    <inlineHelpText>Shows the start time of the Configuration Masking batch</inlineHelpText>
    <label>Start time</label>
    <type>DateTime</type>
</CustomField>