force-app/main/default/objects/pcldm__Execution__c/fields/pcldm__Type__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Type__c</fullName>
    <description>Shows the Masking type selected before executing the Masking Batch. For eg All, Specific or Errored.</description>
    <inlineHelpText>Shows the Masking type selected before executing the Masking Batch. For eg All, Specific or Errored.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Errored</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>