force-app/main/default/objects/pcldm__Execution__c/listViews/pcldm__Execution_by_Data_Masker.listView-meta.xml
<ListView>
    <fullName>pcldm__Execution_by_Data_Masker</fullName>
    <columns>NAME</columns>
    <columns>pcldm__Execution_Status__c</columns>
    <columns>pcldm__Batch_Status__c</columns>
    <columns>pcldm__Records_Total__c</columns>
    <columns>pcldm__Records_Processed__c</columns>
    <columns>pcldm__Records_Errored__c</columns>
    <columns>pcldm__Start_time__c</columns>
    <columns>pcldm__End_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>Execution by Data Masker</label>
</ListView>